detail-sports-medicine.html

--- a/detail-sports-medicine.html
+++ b/detail-sports-medicine.html
@@ -59,7 +59,7 @@
         <p style="text-align: center; max-width: 700px; margin-left: auto; margin-right: auto;">Key areas where understanding muscle function impacts <b>athletic training</b>, <b>injury management</b>, and <b>performance</b>.</p>
 
         <div class="feature-section">
-             <img src="ath1.jpeg" alt="Motion analysis setup">
+             <img src="Ath1.jpeg" alt="Motion analysis setup">
              <h2>Biomechanics & Movement Analysis</h2>
              <p>Using technology like <b>motion capture</b> and <b>force plates</b> to analyze <b>athletic movements</b> (running, jumping, throwing) helps identify <b>technique flaws</b>, <b>muscle imbalances</b>, and factors contributing to <b>potential injury</b>.</p>
         </div>
